// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should alter table adding foreign key with one column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addForeignKey",
                    "name": "xyz",
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "reference": {
                      "id": "P_COLUMN_REFERENCE",
                      "def": {
                        "table": "other",
                        "columns": [
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "id"
                            }
                          }
                        ],
                        "match": null,
                        "on": []
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding foreign key with two columns, and match. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addForeignKey",
                    "name": "xyz",
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "ax_id",
                          "length": 20,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "ay_id"
                        }
                      }
                    ],
                    "reference": {
                      "id": "P_COLUMN_REFERENCE",
                      "def": {
                        "table": "other",
                        "columns": [
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "xid",
                              "length": 10,
                              "sort": "desc"
                            }
                          },
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "yid"
                            }
                          }
                        ],
                        "match": "full",
                        "on": []
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding foreign key with two columns, match and trigger. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addForeignKey",
                    "name": "xyz",
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "ax_id",
                          "length": 20,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "ay_id"
                        }
                      }
                    ],
                    "reference": {
                      "id": "P_COLUMN_REFERENCE",
                      "def": {
                        "table": "other",
                        "columns": [
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "xid",
                              "length": 10,
                              "sort": "desc"
                            }
                          },
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "yid"
                            }
                          }
                        ],
                        "match": "full",
                        "on": [
                          {
                            "trigger": "delete",
                            "action": "set null"
                          },
                          {
                            "trigger": "update",
                            "action": "no action"
                          },
                          {
                            "trigger": "delete",
                            "action": "cascade"
                          }
                        ]
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding foreign key with unnamed constraint and key. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addForeignKey",
                    "name": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "reference": {
                      "id": "P_COLUMN_REFERENCE",
                      "def": {
                        "table": "other",
                        "columns": [
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "id"
                            }
                          }
                        ],
                        "match": null,
                        "on": []
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding foreign key with unnamed constraint. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addForeignKey",
                    "name": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "reference": {
                      "id": "P_COLUMN_REFERENCE",
                      "def": {
                        "table": "other",
                        "columns": [
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "id"
                            }
                          }
                        ],
                        "match": null,
                        "on": []
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding foreign key with unnamed constraint. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addForeignKey",
                    "name": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "reference": {
                      "id": "P_COLUMN_REFERENCE",
                      "def": {
                        "table": "other",
                        "columns": [
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "id"
                            }
                          }
                        ],
                        "match": null,
                        "on": []
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding foreign key with unnamed key. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addForeignKey",
                    "name": "xyz",
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "reference": {
                      "id": "P_COLUMN_REFERENCE",
                      "def": {
                        "table": "other",
                        "columns": [
                          {
                            "id": "P_INDEX_COLUMN",
                            "def": {
                              "column": "id"
                            }
                          }
                        ],
                        "match": null,
                        "on": []
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table dropping foreign key. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "dropForeignKey",
                    "key": "fk_oid"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;
